# tinytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp
